fix invisible button text

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -3,3 +3,6 @@
 
 main
     min-height: 700px
+
+a.btn:visited
+    color: #fff
